apps/prowlarr/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: prowlarr
      port:
        name: https
  tls:
    - hosts:
        - prowlarr
  ingressClassName: tailscale
